cleanup for submodule use

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-# added for IDE support only, use CMakeLists_common.cmake with include instead
+# added for IDE support only, use CMakeLists_common.cmake with include command instead
