hardfloat raspberry toolchain, other toolchains update, creset script

--- a/crosstool/raspbian_wheezy_crosstool.config
+++ b/crosstool/raspbian_wheezy_crosstool.config
@@ -12,6 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# crosstool-ng-1.20.0
+
 # source: https://github.com/crosstool-ng/crosstool-ng/blob/crosstool-ng-1.20.0/samples/armv6-rpi-linux-gnueabi/crosstool.config
 CT_LIBC="eglibc"
 CT_LIBC_VERSION="2.13"
@@ -26,7 +28,12 @@ CT_ARCH_ARCH="armv6zk"
 CT_ARCH_CPU="arm1176jzf-s"
 CT_ARCH_TUNE="arm1176jzf-s"
 CT_ARCH_FPU="vfp"
+CT_ARCH_FLOAT_HW=y
 CT_ARCH_arm=y
+# to enable hf postfix see link
+# https://www.raspberrypi.org/forums/viewtopic.php?t=72266
+# also this property must be re-added manually to generated .config
+CT_ARCH_ARM_TUPLE_USE_EABIHF=y
 CT_ARCH_SUFFIX="v6"
 CT_TARGET_VENDOR="rpi"
 CT_KERNEL_linux=y
